modified:   index.html 	modified:   static/css/style.css 	new file:   static/img/Cofee.PNG

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 </ul>
             </div>
         </nav>
-        <div class="space"></div>
+        <!-- <div class="space"></div> -->
         <main>
             <div class="box1 about">
                 <h1>Hello, I'm <span style="color: rgb(0,217,255);">Divine</span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, eligendi voluptas quod doloremque quos dolore voluptatum accusamus, velit alias exercitationem asperiores dignissimos reprehenderit omnis? In enim ut atque aut veniam, dolores voluptatibus necessitatibus rerum laborum nobis corrupti, earum velit est quisquam delectus error dignissimos reiciendis dicta? Aliquam porro inventore dolore nesciunt consequuntur facere dolores expedita ex a earum, necessitatibus labore, ipsum, enim laudantium! Deleniti alias aperiam atque repellendus cumque rerum consectetur, inventore minus et suscipit temporibus consequatur eius vel reprehenderit!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur aspernatur fuga amet error enim ipsam, et repellendus blanditiis est dolores sapiente deleniti quod nostrum doloribus animi explicabo laboriosam molestias asperiores praesentium cum. Molestias, eos perferendis? Itaque, magnam voluptas. Perspiciatis magnam maiores sint iure incidunt aspernatur dicta vitae quibusdam sunt! Voluptate perferendis, officia reprehenderit quo sequi quaerat delectus optio quas sapiente omnis voluptates temporibus fugiat commodi reiciendis molestiae possimus? Delectus.</p>
             </div>
             <div class="box1 pic"></div>
         </main>
@@ -40,13 +40,37 @@
             <h2>What <span style="color:rgb(0,217,255) ;">I</span> Do</h2>
             <p>These are some of the things I specialize in.</p>
             <div id="services-box">
-                <div class="box2"></div>
-                <div class="box2"></div>
-                <div class="box2"></div>
+                <div class="box2">
+                    <h3>Website Design</h3>
+                    <p>Trust me and let me design a captivating website with modern website design tools for you. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sapiente exercitationem fuga error ducimus provident voluptate neque voluptates aut, veniam hic quos iure reiciendis ab vero deserunt, quasi sit. Sapiente?</p>
+                </div>
+                <div class="box2">
+                    <h3>Graphic Designer</h3>
+                    <p>Take your computer graphics to the next level by confiding in me in creating your computer graphics. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat quisquam reiciendis iusto fuga hic blanditiis, quae modi sapiente. Eius, dignissimos incidunt suscipit magni placeat sequi iste temporibus distinctio obcaecati fugit!</p>
+                </div>
+                <div class="box2">
+                    <h3>Microsoft Office</h3>
+                    <p>From writing documents of all sorts of importance to making captivating presentations, I got you covered. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, esse laboriosam. Voluptatem, consequatur at. Consequatur, aperiam ipsum nam quia voluptatem blanditiis vero dolore, impedit.</p>
+                </div>
             </div>
         </div>
         <div class="space"></div>
-<div id="contact"></div>
+<div id="projects">
+<h3>My <span style="color:rgb(0,217,255);">Pro</span>jects</h3>
+<p>These are some of my projects</p>
+<div class="project-box">
+    <div class="box3 pic1"></div>
+    <div class="box3"></div>
+</div>
+<div class="project-box">
+    <div class="desciption"></div>
+    <div class="project-pic"></div>
+</div>
+<div class="project-box">
+    <div class="desciption"></div>
+    <div class="project-pic"></div>
+</div>
+</div>
         </div>
 </body>
 </html>
