--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
             <div class="brand">
                 <a href="#"><h1>Div<span style="color: rgb(0,217,255);">ine</span></h1></a>
             </div>
+            <ul class="toggle" id="toggle">
+            <li style="list-style: none;">
+                <i class="fa fa-bars" aria-hidden="true" style="color: white;margin-top: 27px; list-style: none;"></i>
+            </li>
+                <div class="dropdown-content">
+                    <a href="#">Home</a>
+                    <a href="#">Profile</a> 
+                    <a href="#">Services</a>
+                    <a href="#">Contact Me</a>
+                </div>
+            </ul>
             <div class="nav-content">
-                <i class="fa fa-bars" aria-hidden="true"></i>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Profile</a></li>
