modified:   index.html 	modified:   static/css/style.css 	new file:   static/img/Divine.png 	new file:   static/img/Project2.PNG

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="static/img/Divine1.jpg">
 </head>
 <body>
     <div class="overlay">
@@ -66,21 +67,35 @@
         </div>
         <div class="space"></div>
 <div id="projects">
-<h3>My <span style="color:rgb(0,217,255);">Pro</span>jects</h3>
+<h2>My <span style="color:rgb(0,217,255);">Pro</span>jects</h2>
 <p>These are some of my projects</p>
 <div class="project-box">
     <div class="box3 pic1"></div>
-    <div class="box3"></div>
+    <div class="box3">
+        <h3>A Cloned Cofee Site</h3>
+        <p>A beautiful Cofee site that has helped International cofee showcase their different brands of cofee to the world.This site shows what different brands of coffee International Cofee sells.Helps users make orders and contact International coffee LTD.<br>Click the button below to view the site.</p>
+        <a href="#">Cofee Site</a>
+    </div>
 </div>
 <div class="project-box">
-    <div class="desciption"></div>
-    <div class="project-pic"></div>
+    <div class="box3 pic2"></div>
+    <div class="box3 reverse">
+        <h3>A Cloned Site of Aptech-Ota</h3>
+        <p>Aptech-Ota is an IT school where people are introduced to coding and software development.Where I currently am doing my ADSE. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem quos, nulla laborum.<br>Click the button below to view my cloned version of Aptech-Ota</p>
+        <a href="#">Click Here</a>
+    </div>
 </div>
 <div class="project-box">
-    <div class="desciption"></div>
-    <div class="project-pic"></div>
+    <div class="box3 pic3">
+    </div>
+    <div class="box3">
+        <h3>A Random Graphic Design</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magni eius esse eveniet necessitatibus, earum repudiandae cum explicabo dolorem eum illum dignissimos, at voluptas. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, laudantium? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt, sunt?<br> CLick the button below to view other random graphics.</p>
+        <a href="#">Click Here</a>
+    </div>
 </div>
 </div>
+<div class="space"></div>
         </div>
 </body>
 </html>
