--- a/index.html
+++ b/index.html
@@ -71,27 +71,35 @@
 <p>These are some of my projects</p>
 <div class="project-box">
     <div class="box3 pic1"></div>
-    <div class="box3">
+    <div class="box3 fit-content">
         <h3>A Cloned Cofee Site</h3>
         <p>A beautiful Cofee site that has helped International cofee showcase their different brands of cofee to the world.This site shows what different brands of coffee International Cofee sells.Helps users make orders and contact International coffee LTD.<br>Click the button below to view the site.</p>
+        <br>
         <a href="#">Cofee Site</a>
+        <br>
     </div>
 </div>
 <div class="project-box">
     <div class="box3 pic2"></div>
-    <div class="box3 reverse">
+    <div class="box3 fit-content">
         <h3>A Cloned Site of Aptech-Ota</h3>
         <p>Aptech-Ota is an IT school where people are introduced to coding and software development.Where I currently am doing my ADSE. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem quos, nulla laborum.<br>Click the button below to view my cloned version of Aptech-Ota</p>
+        <br>
         <a href="#">Click Here</a>
+        <br>
+        <br>
     </div>
 </div>
 <div class="project-box">
     <div class="box3 pic3">
     </div>
-    <div class="box3">
+    <div class="box3 fit-content">
         <h3>A Random Graphic Design</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magni eius esse eveniet necessitatibus, earum repudiandae cum explicabo dolorem eum illum dignissimos, at voluptas. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, laudantium? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt, sunt?<br> CLick the button below to view other random graphics.</p>
+        <br>
         <a href="#">Click Here</a>
+        <br>
+        <br>
     </div>
 </div>
 </div>
