--- a/index.html
+++ b/index.html
@@ -105,6 +105,36 @@
 </div>
 </div>
 <div class="space"></div>
-        </div>
+<div id="contact">
+    <h2>Contact <span style="color:rgb(0,217,255);">Me</span></h2>
+    <p>You can contact me through these platforms</p>
+    <div class="ico">
+        <a href="#">
+            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+        </a>
+        <a href="">
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
+        <a href="#">
+            <i class="fa fa-phone-square" aria-hidden="true"></i>
+        </a>
+        <a href="#">
+            <i class="fa fa-github-square" aria-hidden="true"></i>
+        </a>
+        <a href="#">
+            <i class="fa fa-twitter" aria-hidden="true"></i> 
+        </a>
+    </div>
+    <p>Or leave a message for me from here.</p>
+    <form action="">
+        <input type="text">
+        <button>Submit</button>
+    </form>
+</div>
+<div class="space"></div>
+<footer>
+    <p> &copy Copyright 2022 Divine</p>
+</footer>
+</div>
 </body>
 </html>
